tests/paczka1/fuzzy1/32167787.err
Error in line 23: rz8YAtwck A963 34,7
Error in line 28: k0cyo9 A129 48,2
